# NoguchiWork

./: .gitmodules  01_TensorFlowPrereqs.ipynb  DetectImage.ipynb  Makefile.am  Makefile.in  NOTES  RemoveDuplicatesMultiSize.py  aclocal.m4  config.h.in  configure  configure.ac  numpy_sort.py  xml_to_csv.py
TensorFlow/: RemoveDuplicatesMultiSize.py  generate_tfrecord.py  numpy_sort.py
TensorFlow/scripts/: buildTensorFlow.sh
TensorFlow/training/: ssd_efficientdet_d0_512x512_coco17_tpu-8.config
autom4te.cache/: output.0  output.2  requests  traces.0  traces.1  traces.2
docs/: references.bib
images/: test_labels.csv  training_labels.csv
images/test/: IMG_20210506_172547597.xml
images/training/: IMG_20210503_195634669.xml  IMG_20210503_195643535.xml  IMG_20210503_195651300.xml  IMG_20210503_195656805.xml
include/: json.h
libs/: Makefile.am  Makefile.in
libs/libjson/: Makefile.am  Makefile.in  json.cpp
libs/libjson/.libs/: libgillJson.la  libgillJson.lai  libgillJson.so.0  libgillJson.so.0.0.0
scripts/: 01_TensorFlowPrereqs.py  buildTensorFlow.sh  runTensorFlow.sh
src/: Makefile  Makefile.am  Makefile.in  config.json  main.cpp
training/: label_map.pbtxt  ssd_efficientdet_d0_512x512_coco17_tpu-8.config
